; ModuleID = '/home/carl/AnghaBench/streem/src/extr_node.c_node_fcall_new.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_node.c_node_fcall_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32*, i32 }

@NODE_FCALL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @node_fcall_new(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = call %struct.TYPE_3__* @malloc(i32 24)
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %7, align 8
  %9 = load i32, i32* @NODE_FCALL, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 2
  store i32 %9, i32* %11, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  store i32* %12, i32** %14, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %19, label %17

17:                                               ; preds = %3
  %18 = call i32* (...) @node_array_new()
  store i32* %18, i32** %5, align 8
  br label %19

19:                                               ; preds = %17, %3
  %20 = load i32*, i32** %6, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %19
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @node_nodes_add(i32* %23, i32* %24)
  br label %26

26:                                               ; preds = %22, %19
  %27 = load i32*, i32** %5, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  store i32* %27, i32** %29, align 8
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %31 = bitcast %struct.TYPE_3__* %30 to i32*
  ret i32* %31
}

declare dso_local %struct.TYPE_3__* @malloc(i32) #1

declare dso_local i32* @node_array_new(...) #1

declare dso_local i32 @node_nodes_add(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
